--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -71,8 +71,8 @@
   padding: 0;
   font-style: normal;
   font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 20px;
+  line-height: 20px;
   color: rgba(0, 0, 0, 1);
 }
 
@@ -96,8 +96,9 @@
   opacity: 80%;
 }
 
-.popup__button:disabled {
+.popup__button_disabled {
   opacity: 20%;
+  pointer-events: none;
   cursor: default;
 }
 
